# sail-plan-ai

./: .gitignore  README.md  pyproject.toml
src/langgraph_implementation/: main.py
src/langgraph_implementation/agents/: captain.py  currents.py  weather.py  wind.py
src/langgraph_implementation/graph/: state.py
src/langgraph_implementation/utils/: api.py  llm.py
src/llama_index_implementation/: example.py  local_rag.py  main.py  notes.md
src/llama_index_implementation/agents/: noaa_currents_agent.py
src/llama_index_implementation/cache/: cache.db
src/llama_index_implementation/data/: current_stations.csv  current_stations.tsv
src/llama_index_implementation/utils/: api.py  llm.py
src/llama_index_implementation/workflows/: sailing_dag.py
