[tool.poetry]
name = "sail-plan-ai"
version = "0.1.0"
description = ""
authors = ["Justin Gagne <rengenin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.41"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.1.2"
langchain-openai = "^0.3.8"
dotenv = "^0.9.9"
langgraph = "^0.3.5"
llama-index = "^0.12.23"
llama-index-llms-openai = "^0.3.25"
llama-index-experimental = "^0.5.4"
geopy = "^2.4.1"
diskcache = "^5.6.3"
llama-index-readers-web = "^0.3.8"
bs4 = "^0.0.2"
presidio-anonymizer = "^2.2.357"
langchain-experimental = "^0.3.4"
presidio-analyzer = "^2.2.357"
numpy = "1.26.4"
faker = "^37.0.0"
ipython = "^9.0.2"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
